=======
Edi 0.2
=======

Features:

  * Highlight the current line when editing

Bug fixes

  * Correct selection so it works backwards as well
  * Don't remove highlighting of lines when backspace/delete or newline are entered
  * When opening unrecognised files and cancelling choice don't remember as opened


=======
Edi 0.1
=======

Features:

  * Added a monospaced font picker to settings
  * Indent newlines to match whitespace in the previous line
  * Trim trailing whitespace when saving

Bug fixes

  * T2057 Line numbers are not fully visible in new windows
  * #3 assume bash as default shell when creating a new project
  * #4 Unable to compile


0.0.9
-----

  * New icon :)
  * Integrated elm_code editor
    - faster code highlighting
    - highlighting of error lines
    - highlighting of TODO lines
    - line width indicator in the editor
    - configurable tab stop width

  * Add a main menu and tidy up toolbar
  * Remember UI settings per project
  * Add launch configuration so we can run a built binary


0.0.2
-----

Features

  * Add a settings screen to control various display features
  * Support turning autosave on and off

Bug fixes

  * Fix issues with re-opening closed tabs
  * Fix crash-on-open for some systems
  * Fix username lookup for Windows


0.0.1
-----

Features:

  * Editing and saving text files
  * Tabbed browsing of open files
  * Opening editor in a new window
  * Displaying directory for the project (directory)
  * link files out to external viewers / editors
  * No screen waste (toolbar, menu, tab are out of the way of the developer)
  * info panel with logs and useful output
  * Create new file

  * Simple build functions
  * Search  & replace in file
  * Line numbers & go to line
  * Creation of new projects from name input and skeleton project files
  * Syntax highlighting
  * Diff rendering